add string partition tool